--- a/cvx_sym/templates/prob_set_cpp/problem.hpp.jinja
+++ b/cvx_sym/templates/prob_set_cpp/problem.hpp.jinja
@@ -7,6 +7,8 @@
 {% for name, func in native_func_defs.items() %}
 {{func.header}};{% endfor %}
 
+void gather_variables();
+
 void gather_matrices();
 
 int solve();
